--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
 	
 	
 	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
 
@@ -201,14 +202,6 @@
   	<script src="js/mylibs/jquery-ui-1.8.17.custom.min.js"></script>
     <script defer src="js/plugins.js"></script>
     <script src="js/scripts.js"></script>
-    
-    <!-- Google analytics -->	
-	<script>
-	    var _gaq=[['_setAccount','UA-11500613-2'],['_trackPageview', location.pathname + location.search + location.hash]];
-	    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-	    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-	    s.parentNode.insertBefore(g,s)}(document,'script'));
-  	</script>
   
 </body>
 </html>
