--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -1,1 +1,22 @@
-HI WORLD!
+<section>        
+    <div id="textpage">
+    	<div id="contact">
+    		
+    		<h1>CONTACT</h1>
+    		<p>
+    			Please don't hesitate with contacting me if you have any questions or want to get in touch! I am occasionally available for freelance jobs, so please get in touch if you have an exciting project going on.
+    		</p>
+    		<p>
+    			<a href="mailto:anders@wantstobegreat.com">anders@wantstobegreat.com</a>
+    		</p>
+    		<p class="socialmedia">
+    			<a href="http://twitter.com/wantstobegreat" target="_blank">Twitter</a><br>
+    			<a href="http://facebook.com/wantstobegreat" target="_blank">Facebook page</a><br>
+    			<a href="http://www.linkedin.com/in/andershm" target="_blank">LinkedIn</a><br>
+    			<a href="http://web.stagram.com/n/wantstobegreat" target="_blank">Instagram</a><br>
+                <a href="http://pinterest.com/wantstobegreat" target="_blank">Pinterest</a>
+    		</p>
+    		
+    	</div>
+    </div>
+</section>
