--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <head>
   <meta charset="utf-8">
-  <title>Anders &#215; wants to be great</title>
+  <title>JOE &#215; wants to be great</title>
 
 
   <link rel="stylesheet" href="css/style.css">
@@ -28,7 +28,7 @@
   	
     
         <header id="top">
-            <a href="index.html" class="logo"><img src="img/logo.png" alt="Logo: Anders Højland Mikkelsen - Art Direction and Design - Wants to be great" /></a>
+            <a href="index.html" class="logo"><img src="/img/logo.png" alt="Logo: Anders Højland Mikkelsen - Art Direction and Design - Wants to be great" /></a>
             <nav>
                 <ul>
                 	<li id="l1"><div>&nbsp;</div></li>
@@ -193,13 +193,13 @@
 	
 	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/libs/jquery-1.11.1.js"><\/script>')</script>
 
 
   <!-- scripts concatenated and minified via ant build script-->
   	<script src="js/mylibs/jquery.animate-colors-min.js"></script>
-  	<script src="js/mylibs/jquery-ui-1.8.17.custom.min.js"></script>
+  	<script src="js/mylibs/jquery-ui-1.11.1.js"></script>
     <script defer src="js/plugins.js"></script>
     <script src="js/scripts.js"></script>
   
