updating about section

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <head>
   <meta charset="utf-8">
-  <title>JOE &#215; wants to be great</title>
+  <title>Joe &#215; computers are great</title>
 
 
   <link rel="stylesheet" href="css/style.css">
@@ -28,14 +28,14 @@
   	
     
         <header id="top">
-            <a href="index.html" class="logo"><img src="/img/logo.png" alt="Logo: Anders Højland Mikkelsen - Art Direction and Design - Wants to be great" /></a>
+            <a href="index.html" class="logo"><img src="/img/jec-logo.png" alt="Logo: Anders Højland Mikkelsen - Art Direction and Design - Wants to be great" /></a>
             <nav>
                 <ul>
                 	<li id="l1"><div>&nbsp;</div></li>
                     <li id="l-portfolio" class="active"><a href="index.html">portfolio<span>selected works</span></a></li>
                     <li id="l-about"><a href="#about">about<span>a bit about me</span></a></li>
                     <li id="l-contact"><a href="#contact">contact<span>get in touch</span></a></li>
-                    <li id="l-inspiration"><a href="http://twitter.com/wantstobegreat" target="_blank">twitter<span>(@wantstobegreat)</span></a></li>
+                    <li id="l-inspiration"><a href="http://twitter.com/josephcombs" target="_blank">twitter<span>(@josephcombs)</span></a></li>
                     <li id="l6"><div>&nbsp;</div></li>
                 </ul>
             </nav>
