--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -4,17 +4,16 @@
     		
     		<h1>CONTACT</h1>
     		<p>
-    			Please don't hesitate with contacting me if you have any questions or want to get in touch! I am occasionally available for freelance jobs, so please get in touch if you have an exciting project going on.
+Please get in touch with me for any reason!  I can be reached through the following social media channels.  I also blog at tumblr - let me know if you enjoy my words.  Also, let me know if you hate them.
     		</p>
     		<p>
-    			<a href="mailto:anders@wantstobegreat.com">anders@wantstobegreat.com</a>
+    			<a href="mailto:joseph@josephecombs.com">joseph@josephecombs.com</a>
     		</p>
     		<p class="socialmedia">
-    			<a href="http://twitter.com/wantstobegreat" target="_blank">Twitter</a><br>
-    			<a href="http://facebook.com/wantstobegreat" target="_blank">Facebook page</a><br>
-    			<a href="http://www.linkedin.com/in/andershm" target="_blank">LinkedIn</a><br>
-    			<a href="http://web.stagram.com/n/wantstobegreat" target="_blank">Instagram</a><br>
-                <a href="http://pinterest.com/wantstobegreat" target="_blank">Pinterest</a>
+    			<a href="http://twitter.com/josephcombs" target="_blank">Twitter</a><br>
+    			<a href="http://facebook.com/josephecombs" target="_blank">Facebook</a><br>
+    			<a href="http://www.linkedin.com/pub/joseph-combs/21/275/906" target="_blank">LinkedIn</a><br>
+				<a href="http://josephecombs.tumblr.com" target="_blank">Tumblr</a><br>
     		</p>
     		
     	</div>
