cleaning up case studies

--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -5,7 +5,7 @@
     		
     		<h1>ABOUT</h1>
     		<p>
-                I am a person who is interested in all aspects of information technology.  I believe that the greatest things ever will be the product of the efforts of people in this field.  This is a very special time in human history and I am thrilled to be a part of it.  
+                I am a person who is interested in all aspects of information technology.  I believe that the greatest things ever will be the product of the efforts of people in this field.  This is a very special time in human history and I am thrilled to be a part of it.  Computers are great.  
             </p>
 
             <p>
@@ -13,7 +13,7 @@
 			</p>
 
             <p>
-				I recently finished a web development bootcamp, <a href="http://www.appacademy.io">App Academy</a>, in San Francisco.  I blogged about it <a href="http://josephecombs.tumblr.com">here</a>.  This was one of the hardest things I have done, and I definitely learned a lot.  My knowledge prior was learned both on-the-job and by myself.  App Academy has brought clarity and skill to areas where I previously felt less skilled.
+				I recently finished a web development bootcamp, <a href="http://www.appacademy.io">App Academy</a>, in San Francisco.  I blogged about it <a href="http://josephecombs.tumblr.com">here</a>.  This was one of the hardest things I have completed in my life, and I definitely learned a lot.  My knowledge prior was learned both on the job and by myself.  App Academy has brought clarity and skill to areas where I previously felt less skilled.
 			</p>
 
             <p>
