major changes to about and cases

--- a/public/index.html
+++ b/public/index.html
@@ -56,9 +56,9 @@
              <div id="thumb">
             	<div class="left">
                 	<div class="left-container">
-                    	<a href="#case-jj-lid" rel="case-jj-lid" class="caselink">
-                            <img src="img/port-thumbs/JJ-lid.jpg" alt="">
-                            <div class="thumbhover">Jack &amp; Jones — Low Impact Denim<span>2012: e-commerce micro site</span></div>
+                    	<a href="#" rel="case-asteroids" class="caselink">
+                            <img src="img/port-thumbs/asteroids.png" alt="">
+                            <div class="thumbhover">Javascript Asteroids (COMING SOON)<span>2014: JS browser game</span></div>
                         </a>
                     </div>
                 </div>
@@ -78,9 +78,9 @@
             <div id="thumb">
             	<div class="left">
                 	<div class="left-container">
-                    	<a href="#case-jj-app" rel="case-jj-app" class="caselink">
-                            <img src="img/port-thumbs/JJ-app.jpg" alt="">
-                            <div class="thumbhover">Jack &amp;Jones — iPhone App<span>2012: phone app</span></div>
+                    	<a href="#case-mv" rel="case-mv" class="caselink">
+                            <img src="img/port-thumbs/mv-thumb.png" alt="">
+                            <div class="thumbhover">Machine Vision - proof of concept<span>2014: Ruby Script</span></div>
                         </a>
                     </div>
                 </div>
