--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -17,7 +17,7 @@
 			</p>
 
             <p>
-				Before completing App Academy, I worked at <a href="http://www.mtagservices.com">MTAG Services</a>, first as an Analyst in their Acquisitions Department, and then as a (junior) Software Developer in their Information Technology Department.  MTAG is a financial servicer and I hope to one day return to the financial services field in some capacity.  Their business is very complex and niche, and in my time there I came to mostly understand this complexity.  I would not necessarily be daunted to see a large codebase or org chart or process diagram again. Please see <a href="/Joseph_Combs_Resume.pdf">my CV</a> (pdf) for more information on my background.
+				Before completing App Academy, I worked at <a href="http://www.mtagservices.com">MTAG Services</a>, first as an Analyst in their Acquisitions Department, and then as a (junior) Software Developer in their Information Technology Department.  MTAG is a financial servicer and I hope to one day return to the financial services field in some capacity.  Their business is very complex and niche, and in my time there I came to mostly understand this complexity.  I would not necessarily be daunted to see a large codebase or org chart or process diagram again. Please see <a href="/pages/Joseph_Combs_Resume.pdf">my CV</a> (pdf) for more information on my background.
             </p>
     		
     	</div>
@@ -28,7 +28,14 @@
     		<p>
     			Here are some things I am interested in, in no particular order: machine vision, web development, web scraping, cloud services, progressive house music, business process diagramming, mobile computing, google glass, and of course, <a href="http://twitter.com/josephcombs">tweeting</a> and <a href="http://josephecombs.tumblr.com">blogging</a> about these topics.
     		</p>
+			<br>
+			<br>
+			
     		
     	</div>
+		<div id="me">
+			<h1>THIS IS A MASSIVE PICTURE OF MY HEAD:</h1>
+			<img src="/img/jec.jpg" alt="me">
+		</div>
     </div>
 </section>
