--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -13,11 +13,11 @@
 			</p>
 
             <p>
-				I recently finished a web development bootcamp, <a href="http://www.appacademy.io">App Academy</a>, in San Francisco.  I blogged about it <a href="http://josephecombs.tumblr.com">here</a>.  This was one of the hardest things I have completed in my life, and I definitely learned a lot.  My knowledge prior was learned both on the job and by myself.  App Academy has brought clarity and skill to areas where I previously felt less skilled.
+				I recently finished a web development bootcamp, <a href="http://www.appacademy.io">App Academy</a>, in San Francisco.  I blogged about it <a href="http://josephecombs.tumblr.com">here</a>.  This was one of the hardest things I have completed in my life, and I definitely learned a lot.  My knowledge prior was learned both on the job and by myself.  App Academy has brought clarity and skill to areas where I previously felt less skilled.  Please see my <a href="http://github.com/josephecombs">Github</a> for projects I am currently working on.
 			</p>
 
             <p>
-				Before completing App Academy, I worked at <a href="http://www.mtagservices.com">MTAG Services</a>, first as an Analyst in their Acquisitions Department, and then as a (junior) Software Developer in their Information Technology Department.  MTAG is a financial servicer and I hope to one day return to the financial services field in some capacity.  Their business is very complex and niche, and in my time there I came to mostly understand this complexity.  I would not necessarily be daunted to see a large codebase or org chart or process diagram again. Please see <a href="/pages/Joseph_Combs_Resume.pdf">my CV</a> (pdf) for more information on my background.
+				Before completing App Academy, I worked at <a href="http://www.mtagservices.com">MTAG Services</a>, first as an Analyst in their Acquisitions Department, and then as a (junior) Software Developer in their Information Technology Department.  MTAG is a financial servicer and I hope to one day return to the financial services field in some capacity.  Their business is very complex and niche, and in my time there I came to mostly understand this complexity.  I would not necessarily be daunted to see a large codebase or org chart or process diagram again.  Please see <a href="/pages/Joseph_Combs_Resume.pdf">my CV</a> (pdf) for more information on my background.
             </p>
     		
     	</div>
