--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -14,6 +14,7 @@ Please get in touch with me for any reason!  I can be reached through the follow
     			<a href="http://facebook.com/josephecombs" target="_blank">Facebook</a><br>
     			<a href="http://www.linkedin.com/pub/joseph-combs/21/275/906" target="_blank">LinkedIn</a><br>
 				<a href="http://josephecombs.tumblr.com" target="_blank">Tumblr</a><br>
+				<a href="http://github.com/josephecombs" target="_blank">Github</a><br>
     		</p>
     		
     	</div>
