--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -34,8 +34,7 @@
     		
     	</div>
 		<div id="me">
-			<h1>THIS IS A MASSIVE PICTURE OF MY HEAD</h1>
-			<img src="/img/jec.jpg" alt="me">
+			<img style="opacity: .8" src="/img/jec.jpg" alt="me">
 		</div>
     </div>
 </section>
