--- a/public/cases/case-jj-lid.html
+++ b/public/cases/case-jj-lid.html
@@ -1,7 +1,7 @@
 <section>        
     <div id="description">
         <h1>Jack &amp; Jones â€” Low Impact Denim</h1>
-        <p class="live">Live site: <a href="http://jackjones.com/LID/jj-low-impact-denim,en_GB,sc.html" target="_blank">jackjones.com/LID/jj-low-impact-denim,en_GB,sc.html</a></p>
+        <p class="live">Live site: <a href="http://queueskipper.com" target="_blank">jackjones.com/LID/jj-low-impact-denim,en_GB,sc.html</a></p>
         <p>
            Jack &amp; Jones has lately had more and more focus on creating more sustainable clothing, and thus the Low Impact Denim concept came to live. Early on we had the idea of creating a hand drawn blackboard stopmotion movie to showcase the idea behind the concept, which also became an major visual theme of this micro site.<br>
             <span class="indent">&nbsp;</span>The site was built with the idea of Google Maps in mind, where we placed all the different Low Impact Denim products, videos, images and descriptions on a big blackboard, which our users then get the chance to explore through various interaction options. I designed it for the iPad as a base platform to ensure it would come to live nicely in our shops and to support the retina display from the start.<br><br> 
