--- a/public/cases/case-queueskipper.html
+++ b/public/cases/case-queueskipper.html
@@ -1,7 +1,7 @@
 <section>        
     <div id="description">
         <h1>QueueSkipper - Why Wait?</h1>
-        <p class="live">Live site: <a href="http://jackjones.com/LID/jj-low-impact-denim,en_GB,sc.html" target="_blank">www.queueskipper.com</a></p>
+        <p class="live">Live site: <a href="http://www.queueskipper.com" target="_blank">www.queueskipper.com</a></p>
         <p><span class="indent">&nbsp;</span>QueueSkipper was my idea for an AirBnB clone driven completely by the user's current location, and with a semi-valuable business idea within it - that of people with lower-value time being able to sell it to people with higher-value time.<br>
             <span class="indent">&nbsp;</span>The site was built with with a Ruby on Rails API for both the creation of, search for, and booking of listings.  Rails also handles authentication.  The other cool stuff is driven by Backbone.js and javascript listening to a google map.<br><br> 
 
