--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -4,7 +4,7 @@
     		
     		<h1>CONTACT</h1>
     		<p>
-Please get in touch with me for any reason!  I can be reached through the following social media channels.  I also blog at tumblr - let me know if you enjoy my words.  Also, let me know if you hate them.
+Please get in touch with me for any reason.  I can be reached through the social media channels below.  I blog at tumblr - let me know if you enjoy my words.  Also, let me know if you hate them.
     		</p>
     		<p>
     			<a href="mailto:joseph@josephecombs.com">joseph@josephecombs.com</a>
