--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -7,7 +7,7 @@
 Please get in touch with me for any reason.  I can be reached through the social media channels below.  I blog at tumblr - let me know if you enjoy my words.  Also, let me know if you hate them.
     		</p>
     		<p>
-    			<a href="mailto:joseph@josephecombs.com">joseph@josephecombs.com</a>
+    			<a href="mailto:joseph@josephecombs.com">Email</a>
     		</p>
     		<p class="socialmedia">
     			<a href="http://twitter.com/josephcombs" target="_blank">Twitter</a><br>
