finished creating asteroids case

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
                 	<div class="left-container">
                     	<a href="#" rel="case-asteroids" class="caselink">
                             <img src="img/port-thumbs/asteroids.png" alt="">
-                            <div class="thumbhover">Javascript Asteroids (COMING SOON)<span>2014: JS browser game</span></div>
+                            <div class="thumbhover">Javascript Asteroids<span>2014: JS browser game</span></div>
                         </a>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
 	</div>
 	
 	
-	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
+<!-- credit to @wantstobegreat for site inspiration https://twitter.com/wantstobegreat -->
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/libs/jquery-1.11.1.js"><\/script>')</script>
