--- a/public/cases/case-asteroids.html
+++ b/public/cases/case-asteroids.html
@@ -1,7 +1,7 @@
 <section>        
     <div id="description">
         <h1>Asteroids</h1>
-        <p class="live">Live site: <a href="http://www.queueskipper.com" target="_blank">http://s3-us-west-1.amazonaws.com/mattasteroids/index.html</a></p>
+        <p class="live">Live site: <a href="http://s3-us-west-1.amazonaws.com/mattasteroids/index.html" target="_blank">http://s3-us-west-1.amazonaws.com/mattasteroids/index.html</a></p>
 
         <p><span class="indent">&nbsp;</span>This is a simple Asteroids game I built with my friend <a href="http://www.mattleick.com/">Matt Leick</a>.  The game uses jQuery and an implementation of Canvas to deliver a basic JavaScript game.<br><br><br> 
 
