--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -8,7 +8,7 @@ Please get in touch with me for any reason.  I can be reached through the social
     		</p>
 
     		<p class="socialmedia">
-				<a href="mailto:joseph@josephecombs.com">Email</a>
+				<a href="mailto:joseph@josephecombs.com">Email</a><br>
     			<a href="http://twitter.com/josephcombs" target="_blank">Twitter</a><br>
     			<a href="http://facebook.com/josephecombs" target="_blank">Facebook</a><br>
     			<a href="http://www.linkedin.com/pub/joseph-combs/21/275/906" target="_blank">LinkedIn</a><br>
