--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,18 @@
                     </div>
                 </div>
             </div>
+			
+             <div id="thumb">
+            	<div class="left">
+                	<div class="left-container">
+                    	<a href="#" rel="case-twitterbot" class="caselink">
+							<!--make this 361 x 219 -->
+                            <img src="img/port-thumbs/twitterbot.gif" alt="">
+                            <div class="thumbhover">Twitter Bot<span>2014: Twitter Automation Tool</span></div>
+                        </a>
+                    </div>
+                </div>
+            </div>
                          
             <div id="footermargin">&nbsp;</div>            
         
