finished twitter bot case

--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
                     	<a href="#" rel="case-twitterbot" class="caselink">
 							<!--make this 361 x 219 -->
                             <img src="img/port-thumbs/twitterbot.gif" alt="">
-                            <div class="thumbhover">Twitter Bot<span>2014: Twitter Automation Tool</span></div>
+                            <div class="thumbhover">Paywall Destroyer<span>2014: Twitter Automation Tool</span></div>
                         </a>
                     </div>
                 </div>
