--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -9,11 +9,12 @@ Please get in touch with me for any reason.  I can be reached through the social
 
     		<p class="socialmedia">
 				<a href="mailto:joseph@josephecombs.com">Email</a><br>
-    			<a href="http://twitter.com/josephcombs" target="_blank">Twitter</a><br>
     			<a href="http://facebook.com/josephecombs" target="_blank">Facebook</a><br>
-    			<a href="http://www.linkedin.com/pub/joseph-combs/21/275/906" target="_blank">LinkedIn</a><br>
-				<a href="http://josephecombs.tumblr.com" target="_blank">Tumblr</a><br>
 				<a href="http://github.com/josephecombs" target="_blank">Github</a><br>
+    			<a href="http://www.linkedin.com/pub/joseph-combs/21/275/906" target="_blank">LinkedIn</a><br>
+				<a href="http://stackoverflow.com/users/1730388/joseph-combs" target="_blank">Stack Overflow</a><br>
+				<a href="http://josephecombs.tumblr.com" target="_blank">Tumblr</a><br>
+    			<a href="http://twitter.com/josephcombs" target="_blank">Twitter</a><br>
     		</p>
     		
     	</div>
